Partial implementation of edit product. Edit link for the moment redirects to the rest/products/{id} page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,7 @@
                     <th align="left">Prijs</th>
                     <th align="left">Voorraad</th>
                     <th align="left">Informatie</th>
+                    <th align="left">Edit</th>
                 </tr>
             </thead>
             <tfoot>
@@ -41,6 +42,7 @@
                     <th align="left">Prijs</th>
                     <th align="left">Voorraad</th>
                     <th align="left">Informatie</th>
+                    <th align="left">Edit</th>
 
                 </tr>
             </tfoot>
