--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,15 +1,14 @@
 <html>
     <head>
+        <title>Kaas Shop</title>
         <!--<script src ="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
         <script src ="JS/jquery-3.2.1.min.js"></script>
         <script src ="JS/products.js"></script>
         <link href="CSS/simple.css" rel="stylesheet" />
-
-
     </head>
 
     <body>
-        <h2>Jersey RESTful Web Application!</h2>
+        <h2>De Online Kaaswinkel!</h2>
         <p><a href="rest/users">Users</a>
         <p><a href="rest/products">Products</a>
         <p><a href="rest/carts">Carts</a>
@@ -53,9 +52,7 @@
         <script>
             $(document).ready(function () {
                 startProductTable();
-
                 displayCategories();
-
             });
         </script>
 
