Edit product PUT, Json object populated with for loop

--- a/src/main/webapp/edit-product.html
+++ b/src/main/webapp/edit-product.html
@@ -1,7 +1,6 @@
 <html>
     <head>
         <title>Edit Product</title>
-        <!--<script src ="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
         <script src ="JS/jquery-3.2.1.min.js"></script>
         <script src ="JS/products.js"></script>
         <link href="CSS/simple.css" rel="stylesheet" />
@@ -16,7 +15,7 @@
         <div>
 
             <h3>Gegevens:</h3>
-            <form id="productForm" >
+            <form id="productForm">
                 <label  hidden><b>Id </b></label> <input id="IdId" type="text"
                                                          name="id"  hidden><br /> 
 
@@ -44,12 +43,12 @@
                 <br>
                 <br>
 
-                <button type="submit">'  OK  '</button>
+                <button type="submit">  OK  </button>
             </form> 
         </div>
 
         <script>
-//            window.onload = function () {
+
             $(document).ready(function () {
                 setupEditProduct();
 
