New Product Button added, working POST function

--- a/src/main/webapp/edit-product.html
+++ b/src/main/webapp/edit-product.html
@@ -56,7 +56,7 @@
 
             $(document).on("submit", "form#productForm", function (event) {
                 event.preventDefault();
-                 putProduct();
+                 putPostProduct();
             });
         </script>
 
