--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,7 @@
                 </tr>
             </tfoot>
         </table>
+        <button type="button" onclick="location.href = 'edit-product.html'">Nieuw Product</button>
         
         <p id="test_p">testa</p>
 
