--- a/src/main/webapp/demo-products.html
+++ b/src/main/webapp/demo-products.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title >Kaas Shop</title>
-        <script src ="JS/jquery-3.2.1.min.js"></script>
+        <script src ="JS/jquery.js"></script>
         <script src ="JS/demo-products.js"></script>
         <link href="CSS/simple.css" rel="stylesheet" />
         <link href="CSS/grid.css" rel="stylesheet" />
