Grid now working well, zebra style on demo-product table ok

--- a/src/main/webapp/gridtest.html
+++ b/src/main/webapp/gridtest.html
@@ -20,8 +20,8 @@ and open the template in the editor.
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <!--                    <h2 align="center">Test</h2>-->
-                    test
+                                        <h2 align="center">Test</h2>
+                   
                 </div>
             </div>
 
