@PermitAll, js-srcnames in html aangepast, alleen in cart als cartId bestaat (voor oudere versie van de db)

--- a/src/main/webapp/customer_cart.html
+++ b/src/main/webapp/customer_cart.html
@@ -37,8 +37,9 @@
                     var rowindex = 0;
                     
                     $.each(data, function (key, value) {
+                        if(value.cartId){
                         datarow += ' <tr>';
-                        datarow += ' <td align=/"left/">' + value.cartId.id + ' </td>';
+                        datarow += ' <td align=/"left/">' + value.id + ' </td>';
                         datarow += ' <td align=/"left/">' + value.subTotal + ' </td>';
                         datarow += ' <td align=/"left/">' + value.cartId.userId.email + ' </td>';
                         datarow += ' <td align=/"left/">' + value.cartId.deliveryAddressId.zipCode 
@@ -49,6 +50,7 @@
                         
                         datarow += ' <td align=/"left/" onclick=\"deleteRow(' + value.id + ')\"> <div style="text-align:center; color:red;"> X <div></td> </tr>';
                         rowindex++;
+                    }
                     });
                     $('#table_main').append(datarow);
                 });
