--- a/src/main/webapp/top-navbar.html
+++ b/src/main/webapp/top-navbar.html
@@ -21,8 +21,7 @@ and open the template in the editor.
                             Log in <span>&#x25BC;</span>
                         </a>
                         <div id="login-dropdown" style='display:none'>
-                            <form id="login"> <!-- action="rest/users/login" method="post"> -->
-                                <fieldset id="login-inputs">
+                            <form id="login" action="rest/users/login" method="post">                                <fieldset id="login-inputs">
                                     <input id="login-username" type="email" name="Email" placeholder="Uw emailadres" required>   
                                     <input id="login-password" type="password" name="Password" placeholder="Wachtwoord" required>
                                 </fieldset>
@@ -38,7 +37,7 @@ and open the template in the editor.
                             Aanmelden <span>&#x25BC;</span>
                         </a>
                         <div id="signup-dropdown" style='display:none'>
-                            <form id="signup"> <!--  action="rest/users" method="post"> -->
+                            <form id="signup" action="rest/users" method="post">
                                 <fieldset id="signup-inputs">
                                     <input id="signup-username" type="email" name="Email" placeholder="Uw emailadres" required>   
                                     <input id="signup-password1" type="password" name="Password1" placeholder="Wachtwoord" required>
