AddressenPagina en logica

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
         
         <button> <a href="customer_cart.html">naar Cart</a></button>
         <button> <a href="customer_product.html">naar CustomerProductePage</a></button>
+        <button> <a href="addresses.html">naar addresses</a></button>
         <div id="bodyRestLinks">
         <a href="rest/users"><p class="restLinks">Users</p></a>
         <a href="rest/products"><p class="restLinks">Products</p></a>
