--- a/src/main/webapp/employees/products.html
+++ b/src/main/webapp/employees/products.html
@@ -2,7 +2,7 @@
     <head>
         <title >Kaas Shop</title>
         <script src ="../JS/jquery.js"></script>
-        <script src ="../JS/demo-products.js"></script>
+        <script src ="../JS/employees-products.js"></script>
         <link href="../CSS/simple.css" rel="stylesheet" />
         <link href="../CSS/grid.css" rel="stylesheet" />
     </head>
@@ -18,6 +18,8 @@
                       
             <div class="row">
                 <div class="col-2">
+                    <h3>filter op </h3><br>
+                    <h3>categorie </h3><br><br>
 
                     <form id="categories" >lijst</form>
 
@@ -56,13 +58,5 @@
             </div>
         </div>
 
-
-
-        <script>
-            $(document).ready(function () {
-                startProductTable();
-                displayCatFilters();
-            });
-        </script>
     </body>
 </html>
