--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
-
+        <div id="nav-placeholder">
+        </div>
+        
         <div class="container">
 
             <div class="row">
