Werkende Cart. pakt hoeveelheid in index nog niet

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,6 +55,7 @@
                                 <th>Prijs</th>
                                 <th>Voorraad</th>
                                 <th>Informatie</th>
+                                <th>Hoeveelheid</th>
                                 <th>Voeg toe aan winkelwagen</th>
                             </tr>
                         </thead>
@@ -66,6 +67,7 @@
                                 <th>Prijs</th>
                                 <th>Voorraad</th>
                                 <th>Informatie</th>
+                                <th>Hoeveelheid</th>
                                 <th>Voeg toe aan winkelwagen</th>
                             </tr>
                         </tfoot>
@@ -82,4 +84,5 @@
         <button> <a href="addresses.html">naar addresses</a></button>
      
     </body>
+    
 </html>
