--- a/src/main/webapp/employees/products.html
+++ b/src/main/webapp/employees/products.html
@@ -11,68 +11,72 @@
         <div id="nav-placeholder">
         </div>
 
+
         <div class="container">
-
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 align="center">De Online Kaaswinkel!</h2>
-                    </div>
+            <div class="row">
+                <div class="col-12">
+                    <h2 align="center">De Online Kaaswinkel!</h2>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col-2">
+            <div class="row">
+                <div class="col-2">
 
-                        <h2>&emsp; Categorie: </h2><br>
+                    <h2>&emsp; Categorie: </h2><br>
 
 
-                        <form id="categories" >lijst</form>
-                        <br>
-                        <a href="rest/users"><p  >Users</p></a>
-                        <a href="../rest/products"><p  >Products</p></a>
-                        <a href="../rest/carts"><p  >Carts</p></a>
-                        <a href="../rest/cartsuborders"> <p  >Cart Sub Orders</p></a>
-                        <a href="../rest/sales"><p  >Sales</p></a>
-                        <a href="../rest/finalsuborders"><p  >Final Sub Orders</p></a>
-                        <a href="../rest/addresses"><p  >Addresses</p></a>
-                        <a href="../rest/products/categories"><p  >Product Categories</p></a>
-                        <a href="../rest/users/types"><p  >User Types</p></a>
+                    <form id="categories" >lijst</form>
+                    <br>
+                    <button type="button" onclick="location.href = 'edit-product.html'">Nieuw Product</button>
 
-                    </div>
+                    <!--                        <a href="rest/users"><p  >Users</p></a>
+                                            <a href="../rest/products"><p  >Products</p></a>
+                                            <a href="../rest/carts"><p  >Carts</p></a>
+                                            <a href="../rest/cartsuborders"> <p  >Cart Sub Orders</p></a>
+                                            <a href="../rest/sales"><p  >Sales</p></a>
+                                            <a href="../rest/finalsuborders"><p  >Final Sub Orders</p></a>
+                                            <a href="../rest/addresses"><p  >Addresses</p></a>
+                                            <a href="../rest/products/categories"><p  >Product Categories</p></a>
+                                            <a href="../rest/users/types"><p  >User Types</p></a>
+                    
+                                        </div>
                     <!--                <div class="col-1">
                                        
                                     </div>-->
-                    <div class="col-10">
-                        <table id="productsTable" class="display" cellspacing="0" width="100%">
-                            <thead>
-                                <tr>
-                                    <th hidden>Id</th>
-                                    <th>Naam</th>
-                                    <th>Categorie</th>
-                                    <th>Merk</th>
-                                    <th>Prijs</th>
-                                    <th>Voorraad</th>
-                                    <th>Informatie</th>
-                                    <th>Edit</th>
-                                </tr>
-                            </thead>
-                            <tfoot>
-                                <tr>
-                                    <th hidden>Id</th>
-                                    <th>Naam</th>
-                                    <th>Categorie</th>
-                                    <th>Merk</th>
-                                    <th>Prijs</th>
-                                    <th>Voorraad</th>
-                                    <th>Informatie</th>
-                                    <th>Edit</th>
-                                </tr>
-                            </tfoot>
-                        </table>
-                    </div>
+                </div>
+                <div class="col-10" id="scroll75" >
+                    <table id="productsTable" class="display" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th hidden>Id</th>
+                                <th>Naam</th>
+                                <th>Categorie</th>
+                                <th>Merk</th>
+                                <th>Prijs</th>
+                                <th>Voorraad</th>
+                                <th>Informatie</th>
+                                <th>Edit</th>
+                                <th>Verwijder</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            <tr>
+                                <th hidden>Id</th>
+                                <th>Naam</th>
+                                <th>Categorie</th>
+                                <th>Merk</th>
+                                <th>Prijs</th>
+                                <th>Voorraad</th>
+                                <th>Informatie</th>
+                                <th>Edit</th>
+                                <th>Verwijder</th>
+                            </tr>
+                        </tfoot>
+                    </table>
                 </div>
             </div>
+        </div>
+
 
     </body>
 </html>
