Product Filter working, Delete product working for unused products

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,7 +41,7 @@
                 <!--                <div class="col-1">
                                    
                                 </div>-->
-                <div class="col-10">
+                <div class="col-10" id="scroll75" >
                     <table id="productsTable" class="display" cellspacing="0" width="100%">
                         <thead>
                             <tr>
