--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,8 +8,8 @@
     </head>
 
     <body>
-        <div id="nav-placeholder">
-        </div>
+<!--        <div id="nav-placeholder">
+        </div>-->
         
         <div class="container">
 
