--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,13 +2,15 @@
     <head>
         <title>Kaas Shop</title>
         <script src ="JS/jquery.js"></script>
+        <script src ="JS/cookies.js"></script>
         <script src ="JS/index.js"></script>
+        
         <link href="CSS/grid.css" rel="stylesheet" />
         <link href="CSS/simple.css" rel="stylesheet" />
     </head>
 
     <body>
-        <div id="nav-placeholder">
+      <div id="nav-placeholder">
         </div>
 
         <div class="container">
@@ -18,10 +20,6 @@
                     <h2 class="title">De Online Kaaswinkel!</h2><br>
                 </div>
             </div>
-
-
-            <label><b>Welke Cart Wil je </b></label> <input id="IdId" type="text"
-                                                            name="id" /><br /> 
 
 
 
