verwijderen is nu een knop

--- a/src/main/webapp/customer_cart.html
+++ b/src/main/webapp/customer_cart.html
@@ -104,7 +104,7 @@
                         datarowSubOrder += ' <td align=/"left/">' + value.product.name + ' </td>';
                         datarowSubOrder += ' <td align=/"left/">' + value.quantity + ' </td>';
                         datarowSubOrder += ' <td align=/"left/">' + value.product.price + ' </td>';
-                        datarowSubOrder += ' <td align=/"left/" onclick=\"deleteRow(' + value.id + ',' + id + ')\"> <div style="text-align:center; color:red;"> X <div></td> </tr>';
+                        datarowSubOrder += ' <td align=/"left/" onclick=\"deleteRow(' + value.id + ',' + id + ')\"> <button><div style="text-align:center; color:red;"> X <div></button></td> </tr>';
                         totalPrijs+= value.subTotal;
                        
                        }
