1) cart doet het weer bij alle gebruikers 2) zoekbalk in de layout (werkt nog niet) 3) navbar bij alle pagina's 4) UserFacade maakt cart aan bij aanmaken user

--- a/src/main/webapp/customer_finalorder.html
+++ b/src/main/webapp/customer_finalorder.html
@@ -5,10 +5,13 @@
         <script src ="JS/jquery.js"></script>
         <script src ="JS/products.js"></script>
         <script src ="JS/cookies.js"></script>
+         <script src ="JS/index.js"></script>
         <link href="CSS/simple.css" rel="stylesheet" />
     </head>
     
-    <body style="background-image: url('Party_Hat.png'); background-size: 150px;">
+    <body style="background-image: url('/Jee-Shop/IMG/Party_Hat.png'); background-size: 150px;">
+        <div id="nav-placeholder">
+        </div>
         <h2 class="title">FINAL ORDER!! GIVE THAT MONEY</h2>
         <br/><br/><br/><br/>
         
