--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,7 +22,13 @@
 
             <div id="productInfo"><p>INFO</p></div>
 
-
+            <div class="search_bar">
+                <input type="text" id="cheese_name" />
+                <button onclick="searchCheese()"><img  src="/Jee-Shop/IMG/loop.png" height="25" width="30" /></button>
+                </div>
+            </div>
+            <br/>
+            
             <div class="row">
                 <div class="col-2">
 
@@ -70,10 +76,6 @@
 
         <br/><br/>
 
-        <button> <a href="customer_cart.html">naar Cart</a></button>
-        <button> <a href="customer_product.html">naar CustomerProductePage</a></button>
-        <button> <a href="addresses.html">naar addresses</a></button>
-        <button> <a href="employees/orders.html">naar order overzicht</a></button>
         <script src ="JS/index.js"></script>
     </body>
 
