--- a/src/main/webapp/customer_cart.html
+++ b/src/main/webapp/customer_cart.html
@@ -5,10 +5,13 @@
         <script src ="JS/jquery.js"></script>
         <script src ="JS/products.js"></script>
         <script src ="JS/cookies.js"></script>
+         <script src ="JS/index.js"></script>
         <link href="CSS/simple.css" rel="stylesheet" />
     </head>
 
     <body>
+        <div id="nav-placeholder">
+        </div>
         <h2 class="title">Customer Cart</h2>
         <br/><br/><br/><br/>
         
