--- a/src/main/webapp/employees/users.html
+++ b/src/main/webapp/employees/users.html
@@ -21,44 +21,48 @@
 
             <div class="row">
                 <div class="col-2">
+                    <div class="catbox">
 
-                    <h2>&emsp; Gebruiker Type: </h2><br>
+                        <h3>&emsp; Gebruiker Type: </h3><br>
 
 
-                    <form id="UserTypes" >lijst</form>
-                    <br>
-                    <button type="button" onclick="location.href = 'edit-user.html'">Nieuwe Gebruiker</button>
+                        <form id="UserTypes" >lijst</form>
+                        <br>
+                        <button id='newButton' type="button" >Nieuwe Gebruiker</button>
 
-                  
+                    </div>
                 </div>
-                <div class="col-10" id="scroll75" >
-                    <table id="usersTable" class="display" cellspacing="0" width="100%">
-                        <thead>
-                            <tr>
-                                <th hidden>Id</th>
-                                <th>Type</th>
-                                <th>Email</th>
-                                <th>Naam</th>
-                                <th>Adres gegevens</th>
-                                <th>Edit</th>
-                                <th>Verwijder</th>                  
-                            </tr>
-                        </thead>
-                        <tfoot>
-                            <tr>
-                                <th hidden>Id</th>
-                                <th>Type</th>
-                                <th>Email</th>
-                                <th>Naam</th>
-                                <th>Adres gegevens</th>
-                                <th>Edit</th>
-                                <th>Verwijder</th> 
-                            </tr>
-                        </tfoot>
-                    </table>
+                <div class="col-10">
+                    <div id="scroll75" >
+                        <table id="usersTable" class="display" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th hidden>Id</th>
+                                    <th>Type</th>
+                                    <th>Email</th>
+                                    <th>Naam</th>
+                                    <th>Adres gegevens</th>
+                                    <th>Edit</th>
+                                    <th>Verwijder</th>                  
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th hidden>Id</th>
+                                    <th>Type</th>
+                                    <th>Email</th>
+                                    <th>Naam</th>
+                                    <th>Adres gegevens</th>
+                                    <th>Edit</th>
+                                    <th>Verwijder</th> 
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
+
 
 
     </body>
